# sovs-parser

./: .gitignore  Cargo.toml  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: clippy.yml  format.yml  tests.yml
benches/: isomorphism.rs
src/: grammar.lalrpop  isomorphism.rs  lib.rs  test_suite.rs
test-suite/owl-functional/: punning.ofn
test-suite/owl-rdf/: external-class.owl  foaf.owl  foaf_simple.owl  punning.owl  swrl_individual.owl
test-suite/owl-rdf/manual/: ec_short_124_129.owl  oeo-snippet.owl  some-broken.owl
test-suite/owl-rdf/withimport/: import-property-by-viri.owl  import-property.owl  other-property.owl
test-suite/owl-ttl/: punning.ttl  swrl_individual.ttl
test-suite/owl-xml/: punning.owx
test-suite/owl-xml/manual/: broken.owx  empty-prefix.owx
test-suite/sovs/: and.sovs  class.sovs  external-class.sovs  inverse-properties.sovs  label.sovs  not.sovs  object-property-asymmetric.sovs  object-property-domain.sovs  object-property-functional.sovs  object-property-inverse-functional.sovs  object-property-irreflexive.sovs  object-property-range.sovs  object-property-reflexive.sovs  object-property-symmetric.sovs  object-property-transitive.sovs  only.sovs  oproperty.sovs  or.sovs  recursing_class.sovs  some.sovs  subclass.sovs
