[package]
name = "sovs-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbag = "0.1.13"
include_dir = { version = "0.7.4", optional = false, features = ["glob"] }
itertools = "0.14.0"
lalrpop-util = "0.23.0"
radguy = { git = "https://github.com/DATP7/radguy", version = "0.1.0", branch = "vowl-tweaks" }
radguy-ccs = { git = "https://github.com/DATP7/radguy", version = "0.1.0", branch = "vowl-tweaks" }
thiserror = "2.0.18"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = { level = "deny" }
missing_panics_doc = { level = "allow" }
too_many_lines = { level = "allow" }

[build-dependencies]
lalrpop = "0.23.0"

[features]
# test-suite = ["dep:include_dir"]
test-suite = []
