[package]
name = "sovs-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbag = "0.1.13"
include_dir = { version = "0.7.4", optional = true, features = ["glob"] }
itertools = "0.14.0"
lalrpop-util = "0.23.0"
thiserror = "2.0.18"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = { level = "deny" }
missing_panics_doc = { level = "allow" }
too_many_lines = { level = "allow" }

[build-dependencies]
lalrpop = "0.23.0"

[features]
test-suite = ["dep:include_dir"]

[dev-dependencies]
criterion = "0.8.2"

[profile.bench]
debug = true

[[bench]]
name = "isomorphism"
harness = false
